@@ -425,7 +425,15 @@ void kfree_skb(struct sk_buff *skb, int rw)
 
 struct sk_buff *alloc_skb(unsigned int size,int priority)
 {
-	struct sk_buff *skb=(struct sk_buff *)kmalloc(size,priority);
+	struct sk_buff *skb;
+	extern unsigned long intr_count;
+
+	if (intr_count && priority != GFP_ATOMIC) {
+		printk("alloc_skb called nonatomically from interrupt %08lx\n",
+			((unsigned long *)&size)[-1]);
+		priority = GFP_ATOMIC;
+	}
+	skb=(struct sk_buff *)kmalloc(size,priority);
 	if(skb==NULL)
 		return NULL;
 	skb->free= 2;	/* Invalid so we pick up forgetful users */
